Add `background-clip` with animated GIF demo

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                 be applied with colored gradients and animation.
             </p>
         </section>
+        <section class="background-clip-gif">
+            <h2>Using <code>mask-image</code> with an animated GIF:</h2>
+            <div class="demo">USA</div>
+        </section>
     </main>
 </body>
 
