Make final style tweaks for animated GIF `background-clip`

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </p>
         </section>
         <section class="background-clip-gif">
-            <h2>Using <code>mask-image</code> with an animated GIF:</h2>
-            <div class="demo">USA</div>
+            <h2>Using <code>background-clip</code> with an animated GIF:</h2>
+            <div class="demo">United States of America</div>
         </section>
     </main>
 </body>
