--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+    <aside class="notice">
+        <h1>Notice:</h1>
+        <p>This demo can be found on GitHub and CodePen:</p>
+        <ul>
+            <li><a href="https://vaggrippino.github.io/text-gradient-and-fill/">GitHub Pages</a></li>
+            <li><a href="https://github.com/VAggrippino/text-gradient-and-fill">repository</a></li>
+            <li><a href="https://codepen.io/VAggrippino/pen/ExmVjPv">CodePen</a></li>
+        </ul>
+    </aside>
     <header>
         <h1>Text Gradient</h1>
     </header>
