Update CodePen notice

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
     <aside class="notice">
         <h1>Notice:</h1>
-        <p>This demo can be found on GitHub and CodePen:</p>
+        <p>This demo will no longer be updated on CodePen, but the latest version can be found on GitHub and CodeSandbox:</p>
         <ul>
             <li><a href="https://vaggrippino.github.io/text-gradient-and-fill/">GitHub Pages</a></li>
             <li><a href="https://github.com/VAggrippino/text-gradient-and-fill">repository</a></li>
-            <li><a href="https://codepen.io/VAggrippino/pen/ExmVjPv">CodePen</a></li>
+            <li><a href="https://codesandbox.io/s/vigorous-engelbart-js48re?file=/style.css">CodeSandbox</a></li>
         </ul>
     </aside>
     <header>
