Add margins on content

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a class="mdnlink" target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/CSS/background-clip">background-clip</a>
                 with transparent text:
             </h2>
-            <input id="animate" type="checkbox"><label for="animate">Animate It!</label>
+            <input id="animate" class="animate" type="checkbox"><label for="animate">Animate It!</label>
             <div class="demo">Hello World</div>
             <p>
                 The text is invisible and the background is <em>clipped</em> to the
