--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="https://vaggrippino.github.io/text-gradient-and-fill/">GitHub Pages</a></li>
             <li><a href="https://github.com/VAggrippino/text-gradient-and-fill">repository</a></li>
-            <li><a href="https://codesandbox.io/s/vigorous-engelbart-js48re?file=/style.css">CodeSandbox</a></li>
+            <li><a href="https://codesandbox.io/s/vaggrippino-text-gradient-and-fill-x4pw1l">CodeSandbox</a></li>
         </ul>
     </aside>
     <header>
